--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://gwadoush.github.io/home-loan",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.9.5",
-    "vite": "^3.2.7"
+    "vite": "^3.2.7",
+    "vitest": "^1.0.4"
   }
 }
