--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "i18next": "^23.10.1",
     "lucide-react": "^0.295.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-flag-icon-css": "^1.0.25",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/react-flag-icon-css": "^1.0.10",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.9.5",
     "vite": "^3.2.7",
