--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
-    "react-flag-icon-css": "^1.0.25",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1"
